--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,17 +4,17 @@
 
 /* :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #111827;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #111827;
+    --foreground: #ffffff;
   }
-} */
+}
 
-/* body {
+body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
